# Assignment_4

./: CMakeLists.txt  Makefile  Makefile_old  Timer.h  cg  cg.cpp  grid.cpp  grid.h  misc.h  script  solver.cpp
